[Deploy} 배포 테스트 (#184)
* [✨Feat]: 데이터 1차 바인딩

- fetch를 이용한 데이터 가져오기
  (코드 수정이 들어갈 예정입니다)

* [✨Feat] : swiper 기능 시안+@ 구현
[🎨Modify] : main HTML UI 사이드바 제외하고 완성

* [🎨Modify]: 검색바 label 태그 추가, button aria-label

* [🎨Modify]: vite.config에 header,footer 경로 추가

* [✨Feat]: register 마크업 완성(일부 수정 필요)

* [🎨Modify]: 로그인 페이지 마크업 완성

* [🔥Remove]: public > components 폴더 삭제

* [🎨Modify]: 이미지 경로에 /public 삭제

* [🎨Modify]: 이용약관 마크업 구조 변경 및 레이아웃 수정

* [✨Feat]: 리스트 데이터 바인딩 (#116)

- 이 상품 어때요? , 놓치면 후회할 가격 리스트 데이터 바인딩
  (수정 필요)

* [✨Feat]: addCart.js 모달 open, close 기능 구현 (#117)

addCart.js
- 모달 open, close 기능 구현

* [🎨Modify]: 회원가입 마크업 완성 (#118)

* [✨Feat]: 수량 체크 시 총 금액 변경 (#124)

* [✨Feat]: 수량 컨트롤

- 상품의 수량을 선택할 수 있는 기능 구현

* [✨Feat]: 수량 1이하 비활성화

수량이 1 초과면 감소 버튼이 활성화버튼으로 바뀌고,
수량이 1 이하면 감소 버튼이 비활성화

* [✨Feat]: 수량 체크 시 총 금액 변경

수량에 따라 총 금액이 변경되는 로직 구현

* [✨Feat]: localStorage에 하트 상태 표시 (#125)

* [✨Feat]: localStorage에 하트 상태 표시

- 상태에 따라 찜하기가 true, false됩니다.
- 로그인, 비로그인과 관계없이 local에 저장되는 상태
  - 추후에 로그인, 비로그인도 나눌 예정입니다.

* [🎨Modify]: localStorage에 하트 상태 관련 코드수정  (#126)

* [✨Feat]: 수량 컨트롤

- 상품의 수량을 선택할 수 있는 기능 구현

* [✨Feat]: 수량 1이하 비활성화

수량이 1 초과면 감소 버튼이 활성화버튼으로 바뀌고,
수량이 1 이하면 감소 버튼이 비활성화

* [✨Feat]: 수량 체크 시 총 금액 변경

수량에 따라 총 금액이 변경되는 로직 구현

* [✨Feat]: localStorage에 하트 상태 표시

- 상태에 따라 찜하기가 true, false됩니다.
- 로그인, 비로그인과 관계없이 local에 저장되는 상태
  - 추후에 로그인, 비로그인도 나눌 예정입니다.

* [🎨Modify]: localStorage에 하트 상태 관련 코드수정

- 각 상품 별로 wish 담기

 #40

* [📝Comment]: 주석 제거

- 충돌 수정을 위해서 주석 제거 후 다시 보냅니다.

* [🐛Fix]: 수량 에러 수정

- -버튼 눌렀을 때 2부터 비활성화 되는 거 수정했습니다.

* cart 페이지 체크박스 구현 (#128)

* [🎨Modify]: cart.hrml 상품 리스트 image, product_name a태그 링크 수정

cart.html
- 상품 리스트 image, product_name 클릭 시 detail 페이지로 이동

* [🎨Modify]: cart.html h4 마크업 위치 변경

cart.html
- h4 마크업 위치 변경

* [✨Feat]: cart.js cart list 전체선택 기능 구현

cart.js
- cart list 전체선택 기능 구현

* [🔥Remove]: juhyuny 로컬feature/cart에 남은 cart.html 삭제(index.html 아님)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     />
     <meta property="og:image" content="/jandi_logo.svg" />
     <meta property="og:url" content="https://jandi-market.netlify.app/" />
-    <meta property="og:image" content="/jandi_logo.svg" />
-    <meta property="og:url" content="https://jandi-market.netlify.app/" />
     <link rel="stylesheet" href="/src/styles/tailwind.css" />
     <link
       rel="stylesheet"
@@ -42,17 +40,14 @@
     <main class="flex flex-col items-center justify-center size-full">
       <!-- 최상단 Slider Main Container -->
       <!-- 최상단 Slider Main Container -->
-      <!-- 최상단 Slider Main Container -->
-      <!-- 최상단 Slider Main Container -->
       <div class="swiper max-w-[1920px] min-w-[1050px] w-screen min-h-370pxr">
-        <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
-        <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
-        <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
         <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
         <div class="swiper-wrapper">
           <!-- Swiper 각 슬라이드 -->
-          <!-- Swiper 각 슬라이드 -->
-          <!-- Swiper 각 슬라이드 -->
+      <!-- 최상단 Slider Main Container -->
+      <div class="swiper max-w-[1920px] min-w-[1050px] w-screen min-h-370pxr">
+        <!-- Swiper Wrapper, Swiper라이브러리가 slide를 제어하고 관리하기 위한 필수 -->
+        <div class="swiper-wrapper">
           <!-- Swiper 각 슬라이드 -->
           <div
             class="flex items-center justify-center overflow-hidden swiper-slide"
@@ -92,9 +87,7 @@
           </div>
         </div>
         <!-- Swiper 페이지 표시 -->
-        <!-- Swiper 페이지 표시 -->
         <div
-          class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
           class="text-white swiper-pagination w-55pxr h-23pxr bg-black bg-opacity-15 flex justify-center items-center z-10 rounded-full font-normal absolute bottom-25pxr left-[70%] text-16pxr"
         ></div>
         <!-- Swiper Prev & Next 버튼  -->
@@ -135,15 +128,11 @@
           <ul
             class="flex items-start justify-between w-full list-none recommended_product_list swiper-wrapper"
           >
-            <!-- 동적 pb 데이터 랜더링 삽입부 -->
-            <!-- 동적 pb 데이터 랜더링 삽입부 -->
           </ul>
-          <!-- Swiper 페이지 표시 -->
           <!-- Swiper 페이지 표시 -->
           <div class="swiper2-pagination"></div>
         </div>
       </section>
-      <!-- Swiper Prev & Next 버튼  -->
       <!-- Swiper Prev & Next 버튼  -->
       <div class="relative">
         <div
@@ -172,12 +161,10 @@
       <a class="block w-[1050px] h-139pxr my-40pxr" href="#">
         <img
           src="/banner/line_banner_1.png"
-          src="/banner/line_banner_1.png"
           alt="컬리스 퍼플 윅, 더 풍성해진 10월의 퍼플위크"
         />
       </a>
 
-      <!-- Product Swiper Main Container #2 -->
       <!-- Product Swiper Main Container #2 -->
       <section
         class="w-[1050px] h-608pxr flex flex-col items-start py-40pxr gap-28pxr box-content overflow-hidden"
@@ -194,10 +181,8 @@
             <!-- 동적 pb 데이터 랜더링 부분 -->
           </ul>
           <!-- Swiper 페이지 표시 -->
-          <!-- Swiper 페이지 표시 -->
           <div class="swiper3-pagination"></div>
         </div>
-        <!-- Swiper Prev & Next 버튼  -->
         <!-- Swiper Prev & Next 버튼  -->
       </section>
       <div class="relative">
