[Modify] register모달박스 추가

--- a/src/pages/register/index.html
+++ b/src/pages/register/index.html
@@ -41,6 +41,7 @@
   </head>
   <body>
     <header id="header"></header>
+    <div id="modal_box" class="hidden"></div>
     <main>
       <div class="mt-20 mb-10">
         <section class="flex flex-col items-center w1050">
